--- a/css/styles.css
+++ b/css/styles.css
@@ -573,3 +573,50 @@ button {
     background-color: #31d0aa;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
+.modal-overlay {
+    background-color: #fff;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0.5;
+    pointer-events: none;
+    transition: opacity 205ms ease-in-out;
+}
+
+.modal-overlay.is-open {
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.modal {
+    background-color: #fcfcfc;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+    max-width: 408px;
+    max-height: 584%;
+    overflow-y: auto;
+    border-radius: 4px;
+}
+
+.modal-button {
+    border-radius: 4px;
+    width: 24px;
+    height: 24px;
+}
+
+.btn-icon {
+    width: 100%;
+    height: 100%;
+    border-radius: 100%;
+    fill: #e7e9fc;
+    stroke-width: 1px;
+    stroke: rgba(0, 0, 0, 0.1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
