--- a/css/styles.css
+++ b/css/styles.css
@@ -660,6 +660,9 @@ button {
     margin-bottom: 4px;
 }
 
+.user-form {
+    position: relative;
+}
 
 .input-text {
     width: 100%;
@@ -667,13 +670,12 @@ button {
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
     background-color: transparent;
-    background-color: transparent;
+    padding-left: 38px;
     outline: transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.input-text {
-    position: relative;
+.input-text:focus {
     border-color: #4D5AE5;
 }
 
@@ -685,7 +687,7 @@ button {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.personal-icon:focus {
+.input-text.personal-icon:focus {
     fill: #4D5AE5;
 }
 
