--- a/css/styles.css
+++ b/css/styles.css
@@ -607,7 +607,7 @@ button {
     position: absolute;
     top: 24px;
     right: 24px;
-    width: 24px;
+
     height: 24px;
     border-radius: 50%;
     display: flex;
@@ -715,15 +715,24 @@ button {
     resize: none;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border-color: #4D5AE5;
+
+
+    border: 1px solid rgba(46, 47, 66, 0.4);
 }
 
 .user-form-checkbox {
     margin-bottom: 24px;
 }
 
-.user-checkbox {
-    visually-hidden;
+
+
+.span-label input:checked {
+    background-color: #404bbf;
+    border: none;
+    fill: #F4F4FD;
 }
+
+
 
 .user-privacy-label {
     font-size: 12px;
@@ -794,6 +803,8 @@ button {
     background-color: #4D5AE5;
     border: none;
     border-radius: 4px;
+
+    font-family: "Roboto", sans-serif;
 }
 
 .subscribe-button-icon {
@@ -802,11 +813,10 @@ button {
 
 .subscribe-form {
     display: flex;
-}
-
-.subscribe-label {
     gap: 24px;
 }
+
+
 
 .subscribe-label-name {
     width: 264px;
