--- a/css/styles.css
+++ b/css/styles.css
@@ -607,7 +607,7 @@ button {
     position: absolute;
     top: 24px;
     right: 24px;
-
+    width: 24px;
     height: 24px;
     border-radius: 50%;
     display: flex;
@@ -726,7 +726,7 @@ button {
 
 
 
-.span-label input:checked {
+.visually-hidden input:checked {
     background-color: #404bbf;
     border: none;
     fill: #F4F4FD;
@@ -804,7 +804,6 @@ button {
     border: none;
     border-radius: 4px;
 
-    font-family: "Roboto", sans-serif;
 }
 
 .subscribe-button-icon {
