--- a/css/styles.css
+++ b/css/styles.css
@@ -847,3 +847,12 @@ button {
     border: none;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.user-privacy-label span {
+    background-color: #404bbf;
+}
+
+.modal-check:checked+.user-privacy-label span {
+    border: none;
+    fill: #F4F4FD;
+}
