--- a/css/styles.css
+++ b/css/styles.css
@@ -692,7 +692,7 @@ button {
 
 }
 
-.input-text:focus .personal-icon {
+.personal-icon:focus+.input-text {
     fill: #4D5AE5;
 }
 
@@ -718,6 +718,10 @@ button {
 
 
     border: 1px solid rgba(46, 47, 66, 0.4);
+}
+
+.comment-u:focus {
+    border-color: #4D5AE5;
 }
 
 .user-form-checkbox {
@@ -755,6 +759,9 @@ button {
 }
 
 .privacy-link {
+    line-height: 1.3;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
     color: #4d5ae5;
 }
 
@@ -808,6 +815,7 @@ button {
 
 .subscribe-button-icon {
     margin-left: 16px;
+    fill: #fff;
 }
 
 .subscribe-form {
