--- a/css/styles.css
+++ b/css/styles.css
@@ -679,9 +679,6 @@ button {
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.input-text:focus {
-    border-color: #4D5AE5;
-}
 
 .personal-icon {
     position: absolute;
@@ -692,9 +689,10 @@ button {
 
 }
 
-.personal-icon:focus+.input-text {
+.input-text:focus .personal-icon {
     fill: #4D5AE5;
 }
+
 
 .user-form-comment {
     margin-bottom: 16px;
