--- a/css/styles.css
+++ b/css/styles.css
@@ -679,6 +679,9 @@ button {
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.input-text:focus {
+    border-color: #4D5AE5;
+}
 
 .personal-icon {
     position: absolute;
@@ -689,10 +692,11 @@ button {
 
 }
 
-.input-text:focus .personal-icon {
+.personal-icon:focus .input-text {
     fill: #4D5AE5;
 }
 
+.personal-icon {}
 
 .user-form-comment {
     margin-bottom: 16px;
