--- a/css/styles.css
+++ b/css/styles.css
@@ -222,7 +222,7 @@ button {
     cursor: pointer;
     margin: 0 auto;
     display: block;
-    min-width: 169px;
+    width: 169px;
     height: 56px;
     border: none;
     border-radius: 4px;
@@ -692,7 +692,7 @@ button {
 
 }
 
-.input-text:focus .personal-icon: {
+input:focus+svg: {
     fill: #4D5AE5;
 }
 
@@ -846,7 +846,7 @@ button {
     display: block;
     min-width: 169px;
     height: 56px;
-    font-family: "Roboto";
+    font-family: "Roboto", sans-serif;
     font-size: 16px;
     font-weight: 500;
     line-height: 1.5;
