--- a/css/styles.css
+++ b/css/styles.css
@@ -692,8 +692,9 @@ button {
 
 }
 
-input:focus+svg: {
+.input-text:focus+.personal-icon {
     fill: #4D5AE5;
+    ;
 }
 
 
@@ -781,6 +782,10 @@ input:focus+svg: {
     background-color: #4D5AE5;
     border: none;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-form {
+    margin-left: 80px;
 }
 
 .footer-form-text {
